# PhishIntention

./: .gitattributes  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  auto_install_detectron2.py  brand_mapping.json  chrome_setup.bat  chrome_setup.sh  configs.py  data_structures.py  detection_strategies.py  get_positive_site.py  helium_example.py  phishdiscovery_evaluate.py  phishintention.py  phishintention_config.py  phishintention_main.py  phishpedia_main.py  pixi.toml  pyproject.toml  requirements.txt  run.py  run_pedia.py  schedule_run.py  setup.bat  setup.py  setup.sh  setup_in_docker.sh  sonar-project.properties  test_0102.json  test_all_steps.py  test_step1.py  test_step1_simple.py  test_step2.py  test_step3.py  test_step4.py
.github/workflows/: main.yml  setup.yml  static.yml
configs/: configs.yaml  faster_rcnn_login_lr0.001_finetune.yaml  faster_rcnn_web.yaml
modules/: awl_detector.py  crp_classifier.py  crp_locator.py  logo_matching.py  model_base.py  models.py  models2.py
notebooks/: Login_icon_preprocess.ipynb  benchmark_results_eval.ipynb  pipeline_eval.py
ocr_lib/loss/: sequenceCrossEntropyLoss.py
ocr_lib/models/: attention_recognition_head.py  model_builder.py  resnet_aster.py  stn_head.py  (+1 more)
phishintention/: configs_template.yaml  phishintention_config.py  phishintention_main.py  phishpedia_main.py
src/: credential.py  element_detector.py  login_finder _evaluate.py  login_finder.py  login_finder_evaluate.py  pipeline_eval.py  siamese.py
tele/: gsheets.py
unittest_code/: test_all_steps.py
utils/: utils.py  web_utils.py
(+204 files in other folders)
